[gd_scene load_steps=13 format=3 uid="uid://cro8j4fbyssd"]

[ext_resource type="Script" path="res://Scripts/shop/shopmenu.gd" id="1_8e1yo"]
[ext_resource type="Texture2D" uid="uid://buwf50xf1akbu" path="res://Sprites/UI/farmingTilesheetComplete.png" id="1_h1w5j"]
[ext_resource type="Texture2D" uid="uid://b0gsakflcvfir" path="res://Sprites/Interactables/keys.png" id="2_s8syf"]

[sub_resource type="AtlasTexture" id="AtlasTexture_sqeq0"]
atlas = ExtResource("1_h1w5j")
region = Rect2(176, 80, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_dfsur"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sqeq0")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_2hrwf"]
atlas = ExtResource("1_h1w5j")
region = Rect2(176, 80, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_fgea8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2hrwf")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_fd02t"]
atlas = ExtResource("1_h1w5j")
region = Rect2(144, 80, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yh7jt"]
atlas = ExtResource("1_h1w5j")
region = Rect2(128, 80, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_1syqj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fd02t")
}],
"loop": true,
"name": &"hache",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_s8syf")
}],
"loop": true,
"name": &"key",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yh7jt")
}],
"loop": true,
"name": &"pele",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_jim6h"]
atlas = ExtResource("1_h1w5j")
region = Rect2(64, 80, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_8degf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jim6h")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="shopmenu" type="StaticBody2D"]
visible = false
position = Vector2(-2, -1)
script = ExtResource("1_8e1yo")

[node name="buttonLeftIcon" type="AnimatedSprite2D" parent="."]
position = Vector2(35.368, 136.24)
rotation = 1.5708
scale = Vector2(3.94741, 4.03942)
sprite_frames = SubResource("SpriteFrames_dfsur")

[node name="buttonRightIcon" type="AnimatedSprite2D" parent="."]
position = Vector2(93.3047, 131.956)
rotation = -1.5708
scale = Vector2(3.64892, 4.69499)
sprite_frames = SubResource("SpriteFrames_fgea8")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = 9.0
offset_top = 36.0
offset_right = 253.0
offset_bottom = 160.0
color = Color(0.427451, 0.478431, 0.513726, 0.462745)

[node name="LeftButton" type="Button" parent="."]
modulate = Color(0, 1, 1, 0)
offset_left = 12.0
offset_top = 117.0
offset_right = 45.0
offset_bottom = 148.0

[node name="RightButton" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 82.0
offset_top = 116.0
offset_right = 121.0
offset_bottom = 150.0

[node name="icon" type="AnimatedSprite2D" parent="."]
texture_filter = 1
texture_repeat = 1
position = Vector2(59, 60)
scale = Vector2(5.0625, 3.6875)
sprite_frames = SubResource("SpriteFrames_1syqj")
animation = &"hache"

[node name="coinIcon" type="AnimatedSprite2D" parent="."]
position = Vector2(171, 60)
scale = Vector2(4.39062, 4.04688)
sprite_frames = SubResource("SpriteFrames_8degf")

[node name="priceLabel" type="RichTextLabel" parent="."]
offset_left = 94.0
offset_top = 41.0
offset_right = 223.0
offset_bottom = 134.0
text = "100"

[node name="buyButton" type="Button" parent="."]
offset_left = 129.0
offset_top = 100.0
offset_right = 251.0
offset_bottom = 157.0
text = "BUY"

[connection signal="pressed" from="LeftButton" to="." method="_on_left_button_pressed"]
[connection signal="pressed" from="RightButton" to="." method="_on_right_button_pressed"]
[connection signal="pressed" from="buyButton" to="." method="_on_buy_button_pressed"]
